Prevent status bar overflow

--- a/styles/all/theme/pmbars.css
+++ b/styles/all/theme/pmbars.css
@@ -13,6 +13,7 @@
 	background-size: 20px 20px;
 	border-radius: 30px;
 	width: 0;
+	max-width: 100%;
 	height: 100%;
 }
 
